# xtal

./: .gitignore  README.md  test.xt
build-qxtal-Qt_6_4_1_for_macOS-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
build-qxtal-Qt_6_4_1_for_macOS-Debug/.qt/: QtDeploySupport.cmake
build-qxtal-Qt_6_4_1_for_macOS-Debug/.qtc_clangd/: compile_commands.json
build-qxtal-Qt_6_4_1_for_macOS-Debug/qxtal_autogen/: deps  mocs_compilation.cpp
float65/: main.cc
qxtal/: CMakeLists.txt  TODO  main.cc  mainwindow.h  mainwindow.ui  memorywidget.cc  memorywidget.h  resources.qrc  statewidget.cc  vcrwidget.cc
qxtal/include/: commands.h  instructions.h  notifications.h  preferences.h
qxtal/predicates/: predicateeditor.cc  predicateeditor.h  predicateinfo.h
qxtal/sim/: atari.cc  atari.h  atarihw.cc  atarihw.h  display.cc  display.h  io.cc  io.h  mathpack.cc  mathpack.h  simulator.cc  simulator.cc.autosave  simulator.h  worker.cc  worker.h
qxtal/ui/: asmitem.cc  asmitem.h  asmtextedit.cc  asmtextedit.h  asmwidget.cc  asmwidget.h  asmwidget.h.autosave  fontmgr.cc  fontmgr.h  heatmapwidget.cc  heatmapwidget.h  mainwindow.cc  mainwindow.h  mainwindow.ui  memorywidget.cc  memorywidget.h  pointswidget.cc  pointswidget.h  predicates.ui  preferences.ui  statewidget.cc  statewidget.h  traceitem.cc  traceitem.h  tracewidget.cc  tracewidget.h  vcrwidget.cc  vcrwidget.h
shared/Docs/: Design
shared/include/: debug.h  likely.h  macros.h  properties.h  sharedDefines.h  structures.h
tests/: 0000-precedence.xt  0010-math.xt  0011-math.xt  0012-math-add-08s.xt  0012-math-add-08u.xt  0012-math-add-16s.xt  0012-math-add-16u.xt  0012-math-add-32s.xt  0012-math-add-32u.xt  0012-math-add-mix.xt  0012-math-div-08s.xt  0012-math-div-08u.xt  0012-math-div-16s.xt  0012-math-div-16u.xt  0012-math-div-32s.xt  0012-math-div-32u.xt  0012-math-div-mix.xt  0012-math-mul-08s.xt  0012-math-mul-08u.xt  0012-math-mul-16s.xt  0012-math-mul-16u.xt  0012-math-mul-32s.xt  0012-math-mul-32u.xt  0012-math-mul-mix.xt  0012-math-sub-08s.xt  0012-math-sub-08u.xt  0012-math-sub-16s.xt  0012-math-sub-16u.xt  0012-math-sub-32s.xt  0012-math-sub-32u.xt  0012-math-sub-mix.xt  0020-vars.xt  0030-compare.xt  0040-if.xt  0050-while.xt  0060-for.xt  0070-functions.xt  0071-functions.xt  0080-types.xt  0090-pointers.xt  (+18 more)
tests/expected/: 0010-math.run  0020-vars.run  0071-functions.run  0080-types.run  0090-pointers.run  0111-ptr-arith.run  0120-arrays.run  0140-ops.run  0141-ops.run  0143-ops.run  0160-functions.run  0161-functions.run  0162-prototype-arg-fail.run  0162-prototype-ok.run  0162-prototype-type-fail.run
tmp/: test.xt
xtal/: Driver.cc  Driver.h  main.cc
xtal-a/: main.cc
xtal-a/Classes/: Assembler.cc  Assembler.h  ContextMgr.cc  ContextMgr.h  Macro.h  (+14 more)
xtal-c/: main.cc  main.old.cc
xtal-ui/: AppDelegate.h  AppDelegate.m  main.m
xtal.xcodeproj/: project.pbxproj
(+330 files in other folders)
